#1907 fix: Note and icon overlap issue fix & #1343 feat: Survey Listing page validity and status tags enhancements

--- a/src/app/listing/listing.page.scss
+++ b/src/app/listing/listing.page.scss
@@ -142,3 +142,37 @@ h2 {
     font-size: 12px;
   }
 }
+
+span {
+  display: inline-block;
+  padding: 5px 10px;
+  border-radius: 12px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  min-width: 80px;
+}
+
+.tag-not-started {
+  background-color: #ffffff;
+  color: #000;
+  border: 1px solid #ccc;
+}
+
+.tag-in-progress {
+  background-color: #ffa500;
+  color: #fff;
+  border: 1px solid #ff8c00;
+}
+
+.tag-completed {
+  background-color: #800080;
+  color: #fff;
+  border: 1px solid #6a006a;
+}
+
+.tag-expired {
+  background-color: #808080;
+  color: #fff;
+  border: 1px solid #696969;
+}
